tdf#119992 sw: compare sub-strings in SwTextGlyphsKey comparison

Time till the layout reaches idle, before:

77.412 seconds

After:

26.221 seconds (33% of baseline) for me.

Change-Id: Idd0c5255070c836fde2fb048b02c851f5f2321e4
Reviewed-on: https://gerrit.libreoffice.org/61724
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins